docs: record completed ES 5.3.1 -> 8.x port (replaces the Deferred section) (refs #143)
Rewrite the "Deferred — Elasticsearch modules" section as a completed-port summary:
client/query layer (Java API Client over REST, _type -> index-per-label),
Testcontainers + Gherkin harness, cross-module test-jars, the World leak discipline,
rest + federation specifics, the per-module parity baselines, and the tracked
follow-ups (federation partition + jdbc table-name alignment, name_age multi-field,
*StructureSuite GraphMigrator deadlock, Docker portability, nested-edge upsert, geo).
Summary header updated: all five modules migrated, reactor restored.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>